[gd_scene load_steps=9 format=3 uid="uid://dno0jlb7r7wb0"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_mjjkv"]
[ext_resource type="Texture2D" uid="uid://cqporl2mm76ga" path="res://graphics/player/player.png" id="1_uulc4"]
[ext_resource type="Texture2D" uid="uid://hvpadwx2anq2" path="res://graphics/decals/white.png" id="3_dfu1c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3xf01"]
radius = 64.0312

[sub_resource type="Gradient" id="Gradient_r52s0"]
colors = PackedColorArray(0.720039, 1, 0.99761, 1, 0.743706, 1, 0.99751, 0.662745)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dn0f3"]
gradient = SubResource("Gradient_r52s0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nrgw3"]
particle_flag_disable_z = true
spread = 25.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.2
scale_max = 0.5
color = Color(0.788235, 1, 0.996078, 1)
color_ramp = SubResource("GradientTexture1D_dn0f3")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_j0e1y"]
polygon = PackedVector2Array(-28, 58, -36, 52, -38, 44, -43, 39, -45, 33, -52, 28, -54, 20, -53, 16, -57, 13, -61, 4, -61, -5, -62, -17, -60, -23, -57, -27, -55, -30, -54, -36, -46, -44, -41, -47, -32, -48, -30, -47, -28, -51, -18, -57, -13, -57, -12, -55, -4, -59, 9, -59, 11, -58, 18, -61, 24, -61, 28, -58, 35, -49, 44, -40, 43, -38, 48, -29, 55, -28, 60, -25, 63, -23, 74, -11, 83, -10, 84, -12, 88, -11, 96, -5, 107, -4, 110, -2, 111, 2, 122, 2, 123, 3, 127, 6, 131, 9, 132, 12, 132, 24, 131, 28, 129, 31, 128, 32, 124, 32, 122, 30, 119, 30, 121, 33, 121, 36, 111, 36, 110, 34, 108, 34, 101, 42, 98, 43, 95, 43, 95, 49, 92, 52, 60, 52, 58, 48, 58, 44, 61, 42, 57, 41, 42, 40, 36, 43, 30, 45, 25, 45, 14, 52, 1, 58, -6, 59, -12, 60, -18, 60)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_mjjkv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3xf01")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(36, 0)
rotation = 1.5708
texture = ExtResource("1_uulc4")

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerGrenade" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(129, 19)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 11)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(125, 27)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(129, 19)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_nrgw3")
texture = ExtResource("3_dfu1c")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_j0e1y")

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_laser_timeout"]
[connection signal="timeout" from="TimerGrenade" to="." method="_on_timer_grenade_timeout"]
